# GlimpseEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GlimpseEngine  Makefile  Notes.txt  README.md  a.out  build.ps1  cmake_install.cmake  logic.txt  main.c  misc.txt  run.ps1
HeadshotEngine/: Demo.cs  HeadshotEngine.csproj  Program.cs  Start.cs
HeadshotEngine.Editor/: MainWindow.axaml  MainWindow.axaml.cs  Program.cs
HeadshotEngine.Editor/Editor/: .gitignore  App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
HeadshotEngine.Editor/Internal/: Project.cs  ReadProjectFile.cs  exampleProjFile.txt
HeadshotEngine/Engine/: EngineStart.cs  Global.cs  HeadshotEngine.cs  Log.cs  Object.cs  Text.cs  Transform.cs  Vector.cs
HeadshotEngine/Internal/: Project.cs  ReadProjectFile.cs  exampleProjFile.txt
all-src/new-src/: GameObject.c  GameObject.h  V2.c  V2.h  V3.c  V3.h  main.c
new-src/: Collider.c  Collider.h  GameObject.c  GameObject.h  V2.c  V2.h  V3.c  V3.h  main.c
src/: MakeFile  app.cpp  circle.cpp  coll.cpp  color.cpp  comp.cpp  game.cpp  gobj.cpp  line.cpp  main.cpp  math.cpp  rect.cpp  rigidbody.cpp  sprite.cpp  util.cpp  v2.cpp  visual.cpp
src/HeadshotEngine/: Start.cs
src/Include/: BaseObject.h  Collider.h  ComponentList.h  Constants.h  Log.h  Object.h  Shape.h  Transform.h  Vector2.h
src/Source/: main.cpp
src/include/: app.hpp  circle.hpp  coll.hpp  color.hpp  comp.hpp  comptype.hpp  event.hpp  game.hpp  gobj.hpp  image.hpp  line.hpp  math.hpp  physics.hpp  rect.hpp  rigidbody.hpp  shape.hpp  sprite.hpp  tension.hpp  util.hpp  v2.hpp  (+1 more)
(+40 files in other folders)
